syntax = "proto3";

package greet;
option go_package="greetpb";


service GreetService{
    //Unary
    rpc Greet (GreetRequest) returns (GreetResponse);
    // Server Streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreeManyTimesResponse);
    // Client Streaming
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse);
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting =1;
}
message GreeManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}